<resources>
    <string name="app_name">high_security_password_input</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">enter PIN</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_delete">《《《</string>
    <string name="button_0">0</string>
    <string name="button_clear">clear</string>
    <string name="button_multiple">X</string>
    <string name="button_subtract">-</string>
    <string name="button_add">+</string>
    <string name="button_C">C</string>
    <string name="button_confirm">confirm</string>
    <string name="button_refresh">refresh</string>
    <string name="init_compute">the initializing compute:</string>
    <string name="modulo">the modular number:</string>
</resources>
